<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_coin_icon"
        android:layout_width="@dimen/dimen64"
        android:layout_height="@dimen/dimen64"
        android:layout_marginStart="@dimen/dimen16"
        android:layout_marginTop="@dimen/dimen16"
        android:background="@drawable/coin_storke"
        android:padding="@dimen/dimen4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_current_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen16"
        android:layout_marginTop="@dimen/dimen8"
        android:fontFamily="@font/poppins_light"
        android:text="@string/current_buy_price"
        android:textColor="@color/light_grey"
        app:layout_constraintStart_toEndOf="@+id/iv_coin_icon"
        app:layout_constraintTop_toTopOf="@+id/iv_coin_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_current_buy_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_current_buy"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_buy"
        tools:text="Rs 805.2212" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_coin_market_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen8"
        android:drawableStart="@drawable/ic_arrow_up"
        android:gravity="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_current_buy_price"
        app:layout_constraintStart_toEndOf="@+id/tv_current_buy_price"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_buy"
        tools:text="16.55%" />


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/vp_chart_container"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen200"
        android:layout_marginTop="@dimen/dimen24"
        android:layout_marginEnd="@dimen/dimen16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/iv_coin_icon"
        app:layout_constraintTop_toBottomOf="@+id/iv_coin_icon" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/timeline_time_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/vp_chart_container"
        app:layout_constraintStart_toStartOf="@+id/vp_chart_container"
        app:layout_constraintTop_toBottomOf="@+id/vp_chart_container"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_today"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:checked="true"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_day" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_7_day"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_week" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_30_day"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_month" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_1_yr"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_year" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_about_coin"
        style="@style/TextStyleRegular16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen20"
        android:text="@string/about_neo"
        app:layout_constraintStart_toStartOf="@+id/timeline_time_selector"
        app:layout_constraintTop_toBottomOf="@+id/timeline_time_selector" />

    <include
        android:id="@+id/market_rank"
        layout="@layout/layout_about_coin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/vp_chart_container"
        app:layout_constraintStart_toStartOf="@+id/tv_about_coin"
        app:layout_constraintTop_toBottomOf="@+id/tv_about_coin" />

    <include
        android:id="@+id/market_cap"
        layout="@layout/layout_about_coin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/vp_chart_container"
        app:layout_constraintStart_toStartOf="@+id/market_rank"
        app:layout_constraintTop_toBottomOf="@+id/market_rank" />

    <include
        android:id="@+id/coin_status"
        layout="@layout/layout_about_coin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/vp_chart_container"
        app:layout_constraintStart_toStartOf="@+id/market_cap"
        app:layout_constraintTop_toBottomOf="@+id/market_cap" />

    <include
        android:id="@+id/circulating_supply"
        layout="@layout/layout_about_coin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/vp_chart_container"
        app:layout_constraintStart_toStartOf="@+id/coin_status"
        app:layout_constraintTop_toBottomOf="@+id/coin_status" />

    <include
        android:id="@+id/maximum_supply"
        layout="@layout/layout_about_coin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/vp_chart_container"
        app:layout_constraintStart_toStartOf="@+id/circulating_supply"
        app:layout_constraintTop_toBottomOf="@+id/circulating_supply" />

    <include
        android:id="@+id/price_change"
        layout="@layout/layout_about_coin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/vp_chart_container"
        app:layout_constraintStart_toStartOf="@+id/maximum_supply"
        app:layout_constraintTop_toBottomOf="@+id/maximum_supply" />

    <include
        android:id="@+id/volume_change"
        layout="@layout/layout_about_coin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/vp_chart_container"
        app:layout_constraintStart_toStartOf="@+id/price_change"
        app:layout_constraintTop_toBottomOf="@+id/price_change" />

</androidx.constraintlayout.widget.ConstraintLayout>
